2023-07-19  dana  <dana@dana.is>

	* github #99: mirsella: Completion/Darwin/Command/_trash,
	Completion/Unix/Command/_trash: add completion for trash-d

2023-07-10  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 51897 (+ minor tweaks): Completion/Darwin/Command/_softwareupdate:
	update _softwareupdate (based on 51895 by Shohei YOSHIDA)

2023-07-09  Bart Schaefer  <schaefer@zsh.org>

	* 51890: Src/builtin.c: fix "whence -wa" for multiple arguments

2023-06-26  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 51889: Src/Modules/zftp.c, Src/mkbltnmlst.sh: enable loading a
	module (e.g. zftp) that depends on other modules even if zsh is
	built with the full RELRO

	* 51884: Doc/Zsh/params.yo, Src/params.c, Src/utils.c,
	Test/D04parameter.ztst: if MULTIBYTE option is on and IFS contains
	invalid bytes in curret locale then reset it to default

2023-06-22  Bart Schaefer  <schaefer@zsh.org>

	* 51887: Src/math.c, Src/params.c, Test/K02parameter.ztst:
	namespaces recognized in math, incorrect usages rejected.

	* Marlon Richert: 51860: Completion/Base/Completer/_prefix,
	Test/Y01completion.ztst, Test/comptest: simplify suffix handling
	in _prefix to remove longstanding and less accurate hack; tests.

	* Stephane: 51813: Functions/Misc/is-at-least: differentiate empty
	$2 from omitted $2 to avoid wrong comparisons against ZSH_VERSION.

2023-06-20  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 51877: Src/Modules/pcre.mdd, configure.ac: do not build pcre
	module if pcre2-config is not available.

2023-06-19  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 51862: Doc/Makefile.in, configure.ac: support texinfo-7.0

2023-06-08  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 51826: Src/hist.c: correctly handle metafied null character
	when reading history file

	* Stephane: 51817: Completion/BSD/Command/_rcctl: protect ':'
	in _rcctl (was in 51817 but missed in commit 0577daf)

2023-06-06  Peter Stephenson  <p.stephenson@samsung.com>
