@@ -1,3 +1,9 @@
+2023-07-20  Peter Stephenson  <p.stephenson@samsung.com>
+
+	* 51977: Src/jobs.c, Test/E01options.ztst: Combination of
+	PIPEFAIL and ERRRETURN / ERREXIT options failed with complex
+	commands at end of pipeline.
+
 2023-07-19  dana  <dana@dana.is>
 
 	* github #99: mirsella: Completion/Darwin/Command/_trash,
